--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -1,6 +1,24 @@
-x% !TEX root = thesis.tex
+% !TEX root = thesis.tex
 
-\chapter{Discussing the unrestricted type}\label{ch:deriving-unrestricted}
+structure
+- intro
+  - first possible light head, matching + int wins
+  - second possible light head, matching + ext wins
+- relative pronoun, show that it's a D
+- light head
+  - extra light head
+  - light head
+  - possible prediction: ext>int = def, int>ext = wh, not what we see, show 4 examples
+- comparing constituents
+  - first possible head: matching + int wins
+  - second possible head
+    - matching works!
+    - ext wins doesn't work, so first larger syntactic structure: head needs to be up there, for instance cinque (he also says we need to have it up there)
+      then: yes, at some point in the derivation, and then merge the k2
+- summary :)
+
+
+\chapter{Deriving the unrestricted type}\label{ch:deriving-unrestricted}
 
 Languages of the unrestricted type can be summarizes as in Table \ref{tbl:rel-lh-ohg}.
 
